syntax = "proto3";

package auth;

option go_package = "sso.v1;ssopb";

service AuthService {
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc Logout (LogoutRequest) returns (LogoutResponse);
    rpc IsAdmin (IsAdminRequest) returns (IsAdminResponse);
    rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
}

message RegisterRequest {
    string email = 1;
    string password = 2;
    string name = 3;
    string surname = 4;
    string birth_date = 5;
    string role = 6;
}

message RegisterResponse {
    string user_id = 1;
}

message LoginRequest {
    string email = 1;
    string password = 2;
    int32 app_id = 3;
}

message LoginResponse {
    string access_token = 1;
    string refresh_token = 2;
}

message IsAdminRequest{
    string user_id = 1;
}

message IsAdminResponse{
    bool is_admin= 1;
}

message RefreshTokenRequest {
    string refresh_token = 1;
}

message RefreshTokenResponse {
    string access_token = 1;
    string refresh_token = 2;
}

message LogoutRequest {
    string refresh_token = 1;
}

message LogoutResponse {
    bool success = 1;
    string message = 2;
}